--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,22 @@
   --white-color: #ffffff;
   --black-color: #000000;
 
+  --black-color-10: #ffffff1a;
+  --black-color-40: #00000066;
+
   --light-color: #f5f5f5;
+  --dark-color: #222222;
+  --dark-2-color: #333333;
 
   --purple-dark-color: #1c1920;
+
+  --gray-1-color: #888;
+
+  --error-color: #ff4d4d;
+  --error-color-30: #ff4d4d4d;
+
+  --info-1-color: #4c82d2;
+  --info-2-color: #4c82d266;
 }
 
 *,
@@ -13,6 +26,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: var(--font-jost), sans-serif;
 }
 
 body {
