--- a/app/(auth)/page.module.css
+++ b/app/(auth)/page.module.css
@@ -37,11 +37,15 @@
 .title {
   position: relative;
 
+  display: block;
+
   color: var(--light-color);
 
   text-align: center;
 
   margin-bottom: 30px;
+
+  text-decoration: none;
 
   font-size: 24px;
 }
