--- a/app/globals.css
+++ b/app/globals.css
@@ -8,13 +8,17 @@
   --light-color: #f5f5f5;
   --dark-color: #222222;
   --dark-2-color: #333333;
+  --dark-3-color: #262626;
 
   --purple-dark-color: #1c1920;
+  --purple-dark-2-color: #231f28;
 
   --gray-1-color: #888;
+  --gray-2-color: #888;
 
   --error-color: #ff4d4d;
   --error-color-30: #ff4d4d4d;
+  --error-2-color: #4a1a1a;
 
   --info-1-color: #4c82d2;
   --info-2-color: #4c82d266;
