--- a/components/feature/goals/style/goals.module.css
+++ b/components/feature/goals/style/goals.module.css
@@ -33,6 +33,7 @@
 .item {
   display: flex;
   justify-content: space-between;
+  gap: 12px;
 
   border-bottom: 1px solid var(--purple-dark-2-color);
 
