--- a/components/ui/aside/styles/item.module.css
+++ b/components/ui/aside/styles/item.module.css
@@ -4,40 +4,34 @@
 }
 
 .link {
+  position: relative;
+
   display: flex;
   align-items: center;
+
   padding: 15px 20px;
-  color: #f5f5f5;
+
+  color: var(--aside-item-color);
+
   text-decoration: none;
+
   font-size: 16px;
+
   border-radius: 8px;
-  transition: all 0.3s ease-in-out;
-  position: relative;
+
   overflow: hidden;
-}
 
-.link::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: rgba(245, 245, 245, 0.1);
   transition: all 0.3s ease-in-out;
-}
-
-.link:hover::before {
-  left: 0;
 }
 
 .link:hover {
-  background: #333333;
+  background: var(--aside-item-hover-background);
+
   transform: translateX(10px);
 }
 
 .link.active {
-  background: #333333;
+  background: var(--aside-item-active-background);
 }
 
 .link.active::before {
@@ -48,8 +42,11 @@
 
 .link::after {
   content: '→';
+
   margin-left: auto;
+
   opacity: 0;
+
   transition: opacity 0.3s ease-in-out;
 }
 
