--- a/components/ui/checkbox/style/checkbox.module.css
+++ b/components/ui/checkbox/style/checkbox.module.css
@@ -1,12 +1,13 @@
 .container {
   display: flex;
+  align-items: center;
   gap: 10px;
 
   width: 100%;
 
   cursor: pointer;
 
-  color: var(--light-color);
+  color: var(--checkbox-color);
 }
 
 .container input {
@@ -19,7 +20,7 @@
 
 .custom {
   position: relative;
-  top: 2px;
+  top: 0;
 
   width: 24px;
   height: 24px;
@@ -27,13 +28,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  align-self: flex-start;
 
   flex-shrink: 0;
 
   border-radius: 6px;
 
-  background: #222222;
+  background: var(--checkbox-background);
 
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 
@@ -46,7 +46,7 @@
   width: 10px;
   height: 10px;
 
-  background: #f5f5f5;
+  background: var(--checkbox-custom-after-background);
 
   border-radius: 3px;
 
@@ -56,7 +56,7 @@
 }
 
 .container input:checked + .custom {
-  background: #333333;
+  background: var(--checkbox-checked-background);
 }
 
 .container input:checked + .custom::after {
@@ -66,10 +66,12 @@
 .container input:checked ~ span {
   text-decoration: line-through;
 
-  opacity: 0.6;
+  /* TODO */
+  color: #444;
 }
 
 .container input:disabled + .custom {
+  /* TODO */
   background: #444;
 
   cursor: not-allowed;
@@ -78,11 +80,11 @@
 }
 
 .container input:disabled ~ span {
-  color: #777;
+  color: rgba(119, 119, 119, 0.6);
 
   cursor: not-allowed;
 }
 
 .container input:disabled ~ .custom::after {
-  background: #777;
+  background: rgba(119, 119, 119, 0.6);
 }
