--- a/components/ui/input/styles/input.module.css
+++ b/components/ui/input/styles/input.module.css
@@ -1,22 +1,32 @@
 .group {
-  margin-bottom: 25px;
   position: relative;
+
+  margin-bottom: 25px;
 }
 
 .field {
   width: 100%;
+
   padding: 14px;
+
+  /* TODO */
+  color: #f5f5f5;
   background: #333333;
+
   border: 2px solid transparent;
   border-radius: 10px;
-  color: #f5f5f5;
+
   font-size: 16px;
+
   transition: all 0.3s ease;
 }
 
 .field:focus {
   outline: none;
+
+  /* TODO */
   border-color: #4c82d2;
+
   box-shadow: 0 0 15px rgba(76, 130, 210, 0.3);
 }
 
@@ -24,9 +34,14 @@
   position: absolute;
   left: 15px;
   top: 50%;
+
   transform: translateY(-50%);
+
+  /* TODO */
   color: #888;
+
   pointer-events: none;
+
   transition: all 0.3s ease;
 }
 
@@ -34,30 +49,43 @@
 .field:not(:placeholder-shown) + .label {
   top: -10px;
   left: 10px;
+
   font-size: 12px;
+
+  /* TODO */
   color: #4c82d2;
+
   padding: 0 5px;
 }
 
 .group.error .field {
   border-color: var(--error-color);
+
   box-shadow: 0 0 15px var(--error-color-30);
 }
 
 .message {
-  color: var(--error-color);
-  font-size: 12px;
-  margin-top: 5px;
-  opacity: 0;
-  transform: translateY(-10px);
-  transition: all 0.3s ease;
   height: 0;
+
+  color: var(--error-color);
+
+  font-size: 12px;
+
+  margin-top: 5px;
+
+  opacity: 0;
+
+  transform: translateY(-10px);
+
+  transition: all 0.3s ease;
 }
 
 .message.active {
-  opacity: 1;
-  transform: translateY(0);
   height: auto;
+
+  opacity: 1;
+
+  transform: translateY(0);
 }
 
 .label__active {
