feat: changes the method of deleting a goal

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -16,6 +16,7 @@
 
   --gray-1-color: #888;
   --gray-2-color: #888;
+  --gray-3-color: #444;
 
   --error-color: #ff4d4d;
   --error-color-30: #ff4d4d4d;
