--- a/components/feature/goals/style/goals.module.css
+++ b/components/feature/goals/style/goals.module.css
@@ -49,16 +49,45 @@
 }
 
 .canEdit .item_actions {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  align-self: flex-start;
-
   opacity: 0;
 }
 
 .canEdit.item:hover .item_actions {
   opacity: 1;
+}
+
+.checkbox_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+
+  width: 100%;
+}
+
+.goalAction {
+  width: 100%;
+
+  text-align: start;
+
+  font-size: 16px;
+
+  border: none;
+  border-radius: 6px;
+
+  padding: 4px;
+
+  cursor: pointer;
+
+  color: var(--body-color);
+  background: none;
+
+  transition: all 0.3s ease-in-out;
+}
+
+.isChecked .goalAction {
+  text-decoration: line-through;
+
+  color: var(--gray-3-color);
 }
 
 .editWrapper {
@@ -93,4 +122,32 @@
 
 .addGoal {
   margin-top: 24px;
+}
+
+@media (hover: hover) {
+  .canEdit .item_actions {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    align-self: flex-start;
+    display: flex;
+  }
+
+  .removeBtn {
+    display: none;
+  }
+
+  .goalAction:hover {
+    background: rgba(245, 245, 245, 0.05);
+  }
+}
+
+@media (hover: none) {
+  .canEdit .item_actions {
+    display: none;
+  }
+
+  .removeBtn {
+    display: block;
+  }
 }
