--- a/components/ui/checkbox/style/checkbox.module.css
+++ b/components/ui/checkbox/style/checkbox.module.css
@@ -35,7 +35,7 @@
 
   background: var(--checkbox-background);
 
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 
   transition: background 0.3s ease-in-out;
 }
@@ -72,7 +72,7 @@
 
 .container input:disabled + .custom {
   /* TODO */
-  background: #444;
+  background: var(--checkbox-disabled-bg);
 
   cursor: not-allowed;
 
@@ -91,6 +91,7 @@
 
 @media (hover: hover) {
   .custom:hover::after {
+    background: black;
     opacity: 0.3;
   }
 }
