--- a/components/ui/input/styles/input.module.css
+++ b/components/ui/input/styles/input.module.css
@@ -9,9 +9,8 @@
 
   padding: 14px;
 
-  /* TODO */
-  color: #f5f5f5;
-  background: #333333;
+  color: var(--input-color);
+  background: var(--input-bg);
 
   border: 2px solid transparent;
   border-radius: 10px;
@@ -24,8 +23,7 @@
 .field:focus {
   outline: none;
 
-  /* TODO */
-  border-color: #4c82d2;
+  border-color: var(--info-1-color);
 
   box-shadow: 0 0 15px rgba(76, 130, 210, 0.3);
 }
@@ -37,8 +35,7 @@
 
   transform: translateY(-50%);
 
-  /* TODO */
-  color: #888;
+  color: var(--gray-1-color);
 
   pointer-events: none;
 
@@ -52,8 +49,7 @@
 
   font-size: 12px;
 
-  /* TODO */
-  color: #4c82d2;
+  color: var(--info-1-color);
 
   padding: 0 5px;
 }
