fix: goal hover bg color

--- a/assets/styles/colors/dark.css
+++ b/assets/styles/colors/dark.css
@@ -45,4 +45,5 @@
 
   /* Goal */
   --goal-border-bottom-color: var(--purple-dark-2-color);
+  --goal-goalAction-hover-bg: rgba(245, 245, 245, 0.05);
 }
