--- a/components/ui/checkbox/style/checkbox.module.css
+++ b/components/ui/checkbox/style/checkbox.module.css
@@ -91,7 +91,7 @@
 
 @media (hover: hover) {
   .custom:hover::after {
-    background: black;
+    background: var(--checkbox-custom-hover-bg);
     opacity: 0.3;
   }
 }
