--- a/assets/styles/colors/dark.css
+++ b/assets/styles/colors/dark.css
@@ -18,6 +18,7 @@
   /* Checkbox */
   --checkbox-color: var(--light-color);
   --checkbox-background: var(--dark-color);
+  --checkbox-custom-hover-bg: var(--checkbox-custom-after-background);
   --checkbox-custom-after-background: var(--light-color);
   --checkbox-checked-background: var(--dark-2-color);
   --checkbox-disabled-bg: var(--gray-2-color);
