--- a/components/ui/aside/styles/aside.module.css
+++ b/components/ui/aside/styles/aside.module.css
@@ -18,4 +18,25 @@
 
   overflow-y: auto;
   overflow-x: hidden;
+
+  z-index: 50;
+
+  transition: all 0.2s ease-in-out;
+}
+
+@media (max-width: 900px) {
+  .aside {
+    position: absolute;
+    left: -300px;
+
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .aside__open {
+    left: 12px;
+
+    opacity: 1;
+    visibility: visible;
+  }
 }
