--- a/components/feature/goals/style/goals.module.css
+++ b/components/feature/goals/style/goals.module.css
@@ -35,6 +35,8 @@
   justify-content: space-between;
   gap: 12px;
 
+  min-height: 63px;
+
   border-bottom: 1px solid var(--goal-border-bottom-color);
 
   padding: 12px 0;
