--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -11,7 +11,7 @@
   --dark-2-color: #333333;
   --dark-3-color: #262626;
 
-  --purple-dark-color: #1c1920;
+  --purple-dark-color: #201e24;
   --purple-dark-2-color: #231f28;
 
   --gray-1-color: #888;
