--- a/components/ui/aside/styles/aside.module.css
+++ b/components/ui/aside/styles/aside.module.css
@@ -12,8 +12,7 @@
 
   flex-shrink: 0;
 
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
-
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 12px;
 
   overflow-y: auto;
