--- a/components/ui/header/styles/header.module.css
+++ b/components/ui/header/styles/header.module.css
@@ -18,11 +18,10 @@
 
   padding: 20px;
 
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 12px;
 
   background: var(--header-background);
-
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 .tabs {
