--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -48,3 +48,16 @@ h1 {
   font-weight: 500;
   font-size: 32px;
 }
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
