--- a/src/assets/styles/colors/dark.css
+++ b/src/assets/styles/colors/dark.css
@@ -47,4 +47,6 @@
   /* Goal */
   --goal-border-bottom-color: var(--purple-dark-2-color);
   --goal-goalAction-hover-bg: rgba(245, 245, 245, 0.05);
+
+  --edit-input-outline: var(--gray-2-color);
 }
